Compare only alphanumerically